deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-service
  template:
    metadata:
      labels:
        app: fastapi-service
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: fastapi-service
        image: 202403775442.dkr.ecr.ap-south-1.amazonaws.com/fastapi-service:latest
        ports:
        - containerPort: 8000
