service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-service
  ports:
    - protocol: TCP
      port: 8000        # Port exposed within the cluster
      targetPort: 8000  # Port exposed by the FastAPI container
